syntax = "proto3";
package didcomm;

option go_package = "didcomm/loadbalancer/api";

message EndpointRequest {
}

message EndpointResponse {
  string Endpoint = 1;
}

service Loadbalancer {
  rpc GetEndpoint (EndpointRequest) returns (EndpointResponse) {}
}